--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
       <script src="sketch.js"></script>
       <script src="tree.js"></script>
-      <script src="slinshot.js"></script>
+      <script src="slingshot.js"></script>
       <script src="stone.js"></script>
       <script src="ground.js"></script>
       <script src="mango.js"></script>
